--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@ function moveSpaceship() {
 </script>
 <script>
   if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("/27/service-worker.js")
+    navigator.serviceWorker.register("/Space-Escape-Ultimate/service-worker.js")
       .then(() => console.log("Service Worker Registered"))
       .catch((error) => console.log("Service Worker Registration Failed:", error));
   }
